# hackathon_emotional_tone_definition

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  predictions.csv  pyproject.toml
additional_training/: training_model.ipynb
analytics/: analysis.ipynb
app/text_processing_service/: main.py
app/uploads_control_service/: controller.py  env.py  main.py
classification_models/rubert_sentiment_v2/: model.safetensors  tokenizer.json  trainer_state.json
common/: __init__.py
common/adapters/: __init__.py
common/adapters/classifier/: __init__.py  classifier.py
common/adapters/events/: __init__.py  consumer.py  models.py  publisher.py
common/adapters/file_storage/: __init__.py  file_storage.py
common/adapters/parser/: __init__.py  parser.py
common/adapters/storage/: __init__.py  text_storage.py  unit_of_work.py  uploads_storage.py  validation_storage.py
common/api/: __init__.py
common/api/controller/: controller.py
common/api/schemas/: __init__.py  texts.py  uploads.py
common/database/: __init__.py
common/database/adapters/: __init__.py  text_storage.py  unit_of_work.py  uploads_storage.py  validation_storage.py
common/database/adapters/storage/: __init__.py  text_storage.py  uploads_storage.py
common/database/connection/: __init__.py  engine.py  sessions.py
common/database/mappers/: __init__.py  mappers.py
common/database/models/: __init__.py  text.py  upload.py  validation.py
common/domain/models/: __init__.py  text.py  upload.py  validation.py
common/local_file_storage/adapters/: file_storage.py
common/message_queue/adapters/: __init__.py  consumer.py  publisher.py
common/parser/adapters/: __init__.py  parser.py
common/rubert_classifier/: __init__.py  model.py
common/rubert_classifier/adapters/: __init__.py  classifier.py
common/usecases/: __init__.py  create_upload.py  get_tone_distribution.py  get_upload_processing_progress.py  get_upload_sources.py  list_uploads.py  parse_upload.py  process_upload.py  retrieve_upload.py
dockerfiles/: frontend.dockerfile  text_processing_service.dockerfile  uploads_service.dockerfile
frontend/review_analysis/: index.html  package-lock.json  package.json
frontend/review_analysis/src/: App.jsx
frontend/review_analysis/src/API/: UploadService.js
frontend/review_analysis/src/assets/: App.module.scss  MainPage.module.scss  ReviewsAnalysis.module.scss  global.scss
frontend/review_analysis/src/components/badge/: Badge.jsx  badge.module.scss
frontend/review_analysis/src/components/button/: Button.jsx  button.module.scss
frontend/review_analysis/src/components/chart/: PieChart.jsx
frontend/review_analysis/src/components/file-area/: FileArea.jsx  file-area.module.scss
frontend/review_analysis/src/components/input/: Input.jsx  input.module.scss
frontend/review_analysis/src/components/muted-text/: MutedText.jsx  muted-text.module.scss
frontend/review_analysis/src/pages/: MainPage.jsx  ReviewsAnalysis.jsx
model_service/: convert_model_to_onnx.py  dockerfile  onnx_inference.py
nginx/: nginx.conf
versions/: env.py
versions/versions/: 04ce0e98d80e_create_basic_models.py
(+10 files in other folders)
