[project]
name = "emotional-tone-definition"
version = "0.1.0"
description = "Service for defining of emotional tone in reviews"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
